Caroline Jonas et Bertrand Raysz

--- a/working/Module3_Shock_tube.ipynb
+++ b/working/Module3_Shock_tube.ipynb
@@ -50,7 +50,7 @@
     "\\frac{\\partial}{\\partial t}(\\rho v) + \\frac{\\partial}{\\partial x} (\\rho v^2 + p)&=0\\\\\n",
     "\\frac{\\partial}{\\partial t}(\\rho e_T) + \\frac{\\partial}{\\partial x} (\\rho v e_T +p v)&=0\n",
     "\\end{cases}\n",
-    "où v est la vitesse en direction x, $\\rho$ est la densité, p est la pression du fluide et $e_T=e+u^2/2$ est l'énergie totale.\n",
+    "où v est la vitesse en direction x, $\\rho$ est la densité, p est la pression du fluide et $e_T=e+v^2/2$ est l'énergie totale.\n",
     "\n",
     "\n",
     "**Nb**: Nous appelons la vitesse v plutôt que u (notation utilisée dans l'énoncé) pour éviter la confusion avec le vecteur u qui sera introduit plus loin."
